--- a/src/app/catalogos/pages/productos/productos.component.html
+++ b/src/app/catalogos/pages/productos/productos.component.html
@@ -3,12 +3,7 @@
     <div class="ms-2 mt-2">
       <mat-form-field appearance="outline">
         <mat-label>Fitrar Productos</mat-label>
-        <input
-          matInput
-          (keyup)="applyFilter($event)"
-          placeholder="Ex. Mia"
-          #input
-        />
+        <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Mia" #input />
         <mat-icon fontIcon="search" matSuffix></mat-icon>
       </mat-form-field>
     </div>
@@ -40,6 +35,22 @@
       <td mat-cell *matCellDef="let row">{{ row.precio }}</td>
     </ng-container>
 
+    <!-- Acciones Column -->
+    <ng-container matColumnDef="acciones">
+      <th mat-header-cell *matHeaderCellDef>Acciones</th>
+      <td mat-cell *matCellDef="let row">
+        <button mat-icon-button color="primary" (click)="consultar(row)">
+          <mat-icon>visibility</mat-icon>
+        </button>
+        <button mat-icon-button color="accent" (click)="editar(row)">
+          <mat-icon>edit</mat-icon>
+        </button>
+        <button mat-icon-button color="warn" (click)="eliminar(row)">
+          <mat-icon>delete</mat-icon>
+        </button>
+      </td>
+    </ng-container>
+
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
 
@@ -53,8 +64,5 @@
     </tr>
   </table>
 
-  <mat-paginator
-    [pageSizeOptions]="[5, 10, 25, 100]"
-    aria-label="Select page of users"
-  ></mat-paginator>
+  <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users"></mat-paginator>
 </div>
