--- a/src/app/catalogos/dialogs/productos-dialog/productos-dialog.component.html
+++ b/src/app/catalogos/dialogs/productos-dialog/productos-dialog.component.html
@@ -1,4 +1,4 @@
-<h2 mat-dialog-title> {{isEditMode ? 'Editar producto' : 'Nuevo producto'}} </h2>
+<h2 mat-dialog-title> {{type === 'ver' ? 'Ver Producto' : (type === 'editar' ? 'Editar Producto' : 'Nuevo Producto')}} </h2>
 <mat-dialog-content>
   <form autocomplete="" [formGroup]="myForm">
     <div class="row g-3 mt-2">
@@ -12,7 +12,7 @@
       <div class="col-md-6">
         <mat-form-field appearance="outline">
           <mat-label>Precio:</mat-label>
-          <input matInput formControlName="precio" />
+          <input matInput formControlName="precio" type="number" />
           <mat-icon matSuffix>request_quote</mat-icon>
         </mat-form-field>
       </div>
@@ -41,7 +41,7 @@
       <button mat-button (click)="onNoClick()">Cerrar</button>
     </div>
     <div class="col">
-      <button mat-flat-button color="primary" (click)="onSave()" [disabled]="!myForm.valid">
+      <button mat-flat-button color="primary" (click)="onSave()" [disabled]="isSaveDisabled">
         Guardar
       </button>
     </div>
