--- a/src/app/catalogos/pages/productos/productos.component.html
+++ b/src/app/catalogos/pages/productos/productos.component.html
@@ -32,7 +32,7 @@
     <!-- Precio Column -->
     <ng-container matColumnDef="precio">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Precio</th>
-      <td mat-cell *matCellDef="let row">{{ row.precio }}</td>
+      <td mat-cell *matCellDef="let row">{{ row.precio | currency:'MXN':'symbol' }}</td>
     </ng-container>
 
     <!-- Acciones Column -->
@@ -40,7 +40,7 @@
       <th mat-header-cell *matHeaderCellDef>Acciones</th>
       <td mat-cell *matCellDef="let row">
         <button mat-icon-button color="primary" (click)="consultar(row)">
-          <mat-icon>visibility</mat-icon>
+          <mat-icon>search</mat-icon>
         </button>
         <button mat-icon-button color="accent" (click)="editar(row)">
           <mat-icon>edit</mat-icon>
