Inicio de obtencion de colonias por CP, falta la configuracion del module para obtener datos de la API

--- a/src/app/catalogos/dialogs/clientes-dialog/clientes-dialog.component.html
+++ b/src/app/catalogos/dialogs/clientes-dialog/clientes-dialog.component.html
@@ -63,21 +63,21 @@
       <div class="col-md-6">
         <mat-form-field appearance="outline">
           <mat-label>WhatsApp:</mat-label>
-          <input matInput formControlName="whatsApp" />
+          <input matInput formControlName="whatsApp" type="number" />
           <mat-icon matSuffix>phone_iphone</mat-icon>
         </mat-form-field>
       </div>
       <div class="col-md-6">
         <mat-form-field appearance="outline">
           <mat-label>Teléfono:</mat-label>
-          <input matInput formControlName="telefono" />
+          <input matInput formControlName="telefono" type="number"/>
           <mat-icon matSuffix>call</mat-icon>
         </mat-form-field>
       </div>
       <div class="col-md-6">
         <mat-form-field appearance="outline">
           <mat-label>Correo:</mat-label>
-          <input matInput formControlName="correo" />
+          <input matInput formControlName="correo" type="email"/>
           <mat-icon matSuffix>mail</mat-icon>
         </mat-form-field>
       </div>
