--- a/src/app/catalogos/dialogs/clasificacion-dialog/clasificacion-dialog.component.html
+++ b/src/app/catalogos/dialogs/clasificacion-dialog/clasificacion-dialog.component.html
@@ -1,5 +1,5 @@
 
-<h2 mat-dialog-title>Nueva Clasificación</h2>
+<h2 mat-dialog-title>{{ isEditMode == true ? 'Editar Clasificación' : 'Nueva Clasificación'}} </h2>
 <mat-dialog-content>
   <form autocomplete="" [formGroup]="myForm">
     <div class="row g-3 mt-2">
