--- a/src/app/catalogos/dialogs/tecnicos-dialog/tecnicos-dialog.component.scss
+++ b/src/app/catalogos/dialogs/tecnicos-dialog/tecnicos-dialog.component.scss
@@ -5,25 +5,28 @@
 
 .checkboxHorizontal {
   display: flex;
-  flex-direction: column;
-  gap: 8px;
+  flex-wrap: wrap;
 }
 
-.clasificacion-item {
+.btn-small {
+  width: 24px;
+  height: 24px;
+  min-width: 24px;
+  min-height: 24px;
+  padding: 0;
+  opacity: 0;
+  transition: opacity 0.3s;
+  mat-icon {
+    font-size: 16px;
+  }
+}
+
+.checkboxHorizontal .row {
   display: flex;
-  justify-content: space-between; // Asegura que el checkbox y los botones estén en extremos opuestos
-  align-items: center; // Alinea verticalmente al centro
-  padding: 8px; // Espacio adicional alrededor del elemento
-  border: 1px solid #ddd; // Opcional, para delimitar cada ítem
-  border-radius: 4px; // Bordes redondeados para un mejor aspecto
+  align-items: center;
+  margin-bottom: 5px;
 }
 
-.action-buttons {
-  display: flex;
-  gap: 8px; // Espacio entre los botones
-  visibility: hidden; // Oculta por defecto
-}
-
-.clasificacion-item:hover .action-buttons {
-  visibility: visible; // Muestra los botones solo al pasar el cursor sobre el ítem
+.checkboxHorizontal .row:hover .btn-small {
+  opacity: 1;
 }
