Checkboxes del formulario se marcan en la consulta para editar y ver

--- a/src/app/catalogos/dialogs/tecnicos-dialog/tecnicos-dialog.component.html
+++ b/src/app/catalogos/dialogs/tecnicos-dialog/tecnicos-dialog.component.html
@@ -34,7 +34,10 @@
       <div class="col-md-10 checkboxHorizontal">
         <div *ngFor="let clasificacion of clasificaciones" class="row mb-2">
           <div class="col-md-6">
-            <mat-checkbox [disabled]="isSaveDisabled" (change)="onCheckboxChange($event, clasificacion)">
+            <mat-checkbox 
+            [disabled]="isSaveDisabled" 
+            (change)="onCheckboxChange($event, clasificacion)"
+            [checked]="isChecked(clasificacion.counter)">
               {{clasificacion.nombre}}
             </mat-checkbox>
           </div>
