Cambios en las vistas del modal del censo y la vista general del mismo módulo

--- a/src/app/censo/dialogs/clientes-dialog/clientes-dialog.component.html
+++ b/src/app/censo/dialogs/clientes-dialog/clientes-dialog.component.html
@@ -18,6 +18,6 @@
   </form>
 </mat-dialog-content>
 <mat-dialog-actions>
-  <button mat-button>Cerrar</button>
+  <button mat-button (click)="onNoClick()">Cerrar</button>
   <button mat-button [mat-dialog-close]="myControl.value" cdkFocusInitial>Autocompletar</button>
 </mat-dialog-actions>
