--- a/src/app/censo/dialogs/censo-dialog/censo-dialog.component.html
+++ b/src/app/censo/dialogs/censo-dialog/censo-dialog.component.html
@@ -4,63 +4,52 @@
     <mat-step [stepControl]="clientForm">
       <form [formGroup]="clientForm">
         <ng-template matStepLabel>Cliente</ng-template>
+        <div class="col-md-1 text-start">
+          <button mat-fab extended type="button" class="mt-4" color="primary" (click)="openDialog()">
+            Buscar cliente
+          </button>
+        </div>
         <div class="row g-3 mt-2">
           <div class="col-md-5">
             <mat-form-field appearance="outline">
               <mat-label>Clave cliente ASPEL:</mat-label>
-              <input matInput formControlName="claveASPEL" />
+              <input matInput formControlName="claveASPEL" [disabled]="true" />
               <mat-icon matSuffix>vpn_key</mat-icon>
             </mat-form-field>
-          </div>
-          <div class="col-md-1 text-start">
-            <button
-              mat-mini-fab
-              type="button"
-              class="mt-4"
-              color="primary"
-              (click)="openDialog()"
-            >
-              <mat-icon>search</mat-icon>
-            </button>
           </div>
           <div class="col-md-6">
             <mat-form-field appearance="outline">
               <mat-label>Nombre del Cliente:</mat-label>
-              <input matInput formControlName="cliente" />
+              <input matInput formControlName="cliente" [disabled]="true" />
               <mat-icon matSuffix>apartment</mat-icon>
             </mat-form-field>
           </div>
           <div class="col-md-6">
             <mat-form-field appearance="outline">
               <mat-label>WhatsApp:</mat-label>
-              <input matInput formControlName="whatsApp" />
+              <input matInput formControlName="whatsApp" [disabled]="true" />
               <mat-icon matSuffix>phone_iphone</mat-icon>
             </mat-form-field>
           </div>
           <div class="col-md-6">
             <mat-form-field appearance="outline">
               <mat-label>Teléfono:</mat-label>
-              <input matInput formControlName="telefono" />
+              <input matInput formControlName="telefono" [disabled]="true" />
               <mat-icon matSuffix>call</mat-icon>
             </mat-form-field>
           </div>
           <div class="col-md-6">
             <mat-form-field appearance="outline">
               <mat-label>Correo:</mat-label>
-              <input matInput formControlName="correo" />
+              <input matInput formControlName="correo" [disabled]="true" />
               <mat-icon matSuffix>mail</mat-icon>
             </mat-form-field>
           </div>
           <div class="col-md-6">
             <mat-form-field appearance="outline">
               <mat-label>Fecha de registro</mat-label>
-              <input
-                matInput
-                formControlName="fechaRegistro"
-                [matDatepicker]="fechaRegistro"
-                (focus)="fechaRegistro.open()"
-                readonly
-              />
+              <input matInput formControlName="fechaRegistro" [matDatepicker]="fechaRegistro"
+                (focus)="fechaRegistro.open()" readonly />
               <mat-icon matSuffix>calendar_month</mat-icon>
             </mat-form-field>
             <mat-datepicker #fechaRegistro></mat-datepicker>
@@ -72,9 +61,11 @@
         </div>
       </form>
     </mat-step>
+
     <mat-step [stepControl]="equipoForm">
       <ng-template matStepLabel>Descripción</ng-template>
       <mat-accordion class="example-headers-align">
+        <div class="mt-2"></div>
         <form [formGroup]="equipoForm">
           <mat-expansion-panel>
             <mat-expansion-panel-header>
@@ -89,18 +80,10 @@
                 <section class="example-section">
                   <label class="example-margin">Equipo:</label>
                   <mat-radio-group formControlName="tipo">
-                    <mat-radio-button class="example-margin" value="computadora"
-                      >Computadora</mat-radio-button
-                    >
-                    <mat-radio-button class="example-margin" value="escritorio"
-                      >Escritorio</mat-radio-button
-                    >
-                    <mat-radio-button class="example-margin" value="portatil"
-                      >Portatil</mat-radio-button
-                    >
-                    <mat-radio-button class="example-margin" value="tableta"
-                      >Tableta</mat-radio-button
-                    >
+                    <mat-radio-button class="example-margin" value="computadora">Computadora</mat-radio-button>
+                    <mat-radio-button class="example-margin" value="escritorio">Escritorio</mat-radio-button>
+                    <mat-radio-button class="example-margin" value="portatil">Portatil</mat-radio-button>
+                    <mat-radio-button class="example-margin" value="tableta">Tableta</mat-radio-button>
                   </mat-radio-group>
                 </section>
               </div>
@@ -150,13 +133,8 @@
               <div class="col-md-6">
                 <mat-form-field appearance="outline">
                   <mat-label>Fecha de caducidad antivirus</mat-label>
-                  <input
-                    matInput
-                    formControlName="fechaCaducidadAnti"
-                    [matDatepicker]="fechaCaducidadAnti"
-                    (focus)="fechaCaducidadAnti.open()"
-                    readonly
-                  />
+                  <input matInput formControlName="fechaCaducidadAnti" [matDatepicker]="fechaCaducidadAnti"
+                    (focus)="fechaCaducidadAnti.open()" readonly />
                   <mat-icon matSuffix>event</mat-icon>
                 </mat-form-field>
                 <mat-datepicker #fechaCaducidadAnti></mat-datepicker>
@@ -185,9 +163,7 @@
               </div>
               <div class="col-md-6">
                 <mat-form-field appearance="outline">
-                  <mat-label
-                    >Correo de la persona responsable del equipo:</mat-label
-                  >
+                  <mat-label>Correo de la persona responsable del equipo:</mat-label>
                   <input matInput formControlName="responsableCorreo" />
                   <mat-icon matSuffix>alternate_email</mat-icon>
                 </mat-form-field>
@@ -195,6 +171,7 @@
             </div>
           </mat-expansion-panel>
         </form>
+        <div class="mt-2"></div>
         <form [formGroup]="impresoraForm">
           <mat-expansion-panel>
             <mat-expansion-panel-header>
@@ -209,18 +186,10 @@
                 <section class="example-section">
                   <label class="example-margin">Equipo:</label>
                   <mat-radio-group formControlName="tipo">
-                    <mat-radio-button class="example-margin" value="impresora"
-                      >Impresora</mat-radio-button
-                    >
-                    <mat-radio-button class="example-margin" value="matriz"
-                      >Matriz</mat-radio-button
-                    >
-                    <mat-radio-button class="example-margin" value="laser"
-                      >Laser</mat-radio-button
-                    >
-                    <mat-radio-button class="example-margin" value="termica"
-                      >Termica</mat-radio-button
-                    >
+                    <mat-radio-button class="example-margin" value="impresora">Impresora</mat-radio-button>
+                    <mat-radio-button class="example-margin" value="matriz">Matriz</mat-radio-button>
+                    <mat-radio-button class="example-margin" value="laser">Laser</mat-radio-button>
+                    <mat-radio-button class="example-margin" value="termica">Termica</mat-radio-button>
                   </mat-radio-group>
                 </section>
               </div>
@@ -277,18 +246,13 @@
         <button mat-button matStepperNext>Fotografias</button>
       </div>
     </mat-step>
+
     <mat-step>
       <ng-template matStepLabel>Fotografías</ng-template>
       <div class="row justify-content-center align-items-center g-2">
         <div class="col-md-6">
           <div class="text-center">
-            <input
-              type="file"
-              #fileInput
-              style="display: none"
-              (change)="onFileSelected($event)"
-              multiple
-            />
+            <input type="file" #fileInput style="display: none" (change)="onFileSelected($event)" multiple />
             <button mat-fab color="primary" (click)="fileInput.click()">
               <mat-icon>photo_camera</mat-icon>
             </button>
@@ -296,10 +260,7 @@
         </div>
         <div class="col-md-6">
           <div class="row justify-content-center align-items-center g-2">
-            <ngx-gallery
-              [options]="galleryOptions"
-              [images]="galleryImages"
-            ></ngx-gallery>
+            <ngx-gallery [options]="galleryOptions" [images]="galleryImages"></ngx-gallery>
           </div>
         </div>
       </div>
