--- a/src/app/censo/pages/censos/censos.component.html
+++ b/src/app/censo/pages/censos/censos.component.html
@@ -3,12 +3,7 @@
     <div class="ms-2 mt-2">
       <mat-form-field appearance="outline">
         <mat-label>Fitrar Censo </mat-label>
-        <input
-          matInput
-          (keyup)="applyFilter($event)"
-          placeholder="Ex. Mia"
-          #input
-        />
+        <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Mia" #input />
         <mat-icon fontIcon="search" matSuffix></mat-icon>
       </mat-form-field>
     </div>
@@ -49,22 +44,19 @@
     </ng-container>
 
     <!-- Acciones Column -->
+  
     <ng-container matColumnDef="acciones">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Acciones</th>
+      <th mat-header-cell *matHeaderCellDef>Acciones</th>
       <td mat-cell *matCellDef="let row">
-        <div class="example-button-row">
-          <div class="example-flex-container">
-            <div class="example-button-container">
-              <button
-                mat-mini-fab
-                color="primary"
-                (click)="openCensoDetalleDialog(row)"
-              >
-                <mat-icon>visibility</mat-icon>
-              </button>
-            </div>
-          </div>
-        </div>
+        <button mat-icon-button color="primary" (click)="openCensoDetalleDialog(row)">
+          <mat-icon>search</mat-icon>
+        </button>
+        <button mat-icon-button color="accent" (click)="editar(row)">
+          <mat-icon>edit</mat-icon>
+        </button>
+        <button mat-icon-button color="warn" (click)="eliminar(row)">
+          <mat-icon>delete</mat-icon>
+        </button>
       </td>
     </ng-container>
 
@@ -79,8 +71,5 @@
     </tr>
   </table>
 
-  <mat-paginator
-    [pageSizeOptions]="[5, 10, 25, 100]"
-    aria-label="Select page of users"
-  ></mat-paginator>
+  <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users"></mat-paginator>
 </div>
