--- a/src/app/catalogos/dialogs/clientes-dialog/clientes-dialog.component.html
+++ b/src/app/catalogos/dialogs/clientes-dialog/clientes-dialog.component.html
@@ -82,6 +82,14 @@
         </mat-form-field>
       </div>
       
+      <div class="col-md-6">
+        <mat-form-field appearance="outline">
+          <mat-label>URL Ubicación:</mat-label>
+          <input matInput formControlName="urlMaps" type="text" />
+          <mat-icon matSuffix>location_on</mat-icon>
+        </mat-form-field>
+      </div>
+
       <hr>
       <div class="col-md-6">
         <mat-form-field appearance="outline">
