--- a/src/app/censo/dialogs/censo-dialog/censo-dialog.component.html
+++ b/src/app/censo/dialogs/censo-dialog/censo-dialog.component.html
@@ -13,35 +13,35 @@
           <div class="col-md-5">
             <mat-form-field appearance="outline">
               <mat-label>Clave cliente ASPEL:</mat-label>
-              <input matInput formControlName="claveASPEL" [disabled]="true" />
+              <input matInput formControlName="claveASPEL" />
               <mat-icon matSuffix>vpn_key</mat-icon>
             </mat-form-field>
           </div>
           <div class="col-md-6">
             <mat-form-field appearance="outline">
               <mat-label>Nombre del Cliente:</mat-label>
-              <input matInput formControlName="cliente" [disabled]="true" />
+              <input matInput formControlName="cliente" />
               <mat-icon matSuffix>apartment</mat-icon>
             </mat-form-field>
           </div>
           <div class="col-md-6">
             <mat-form-field appearance="outline">
               <mat-label>WhatsApp:</mat-label>
-              <input matInput formControlName="whatsApp" [disabled]="true" />
+              <input matInput formControlName="whatsApp" />
               <mat-icon matSuffix>phone_iphone</mat-icon>
             </mat-form-field>
           </div>
           <div class="col-md-6">
             <mat-form-field appearance="outline">
               <mat-label>Teléfono:</mat-label>
-              <input matInput formControlName="telefono" [disabled]="true" />
+              <input matInput formControlName="telefono" />
               <mat-icon matSuffix>call</mat-icon>
             </mat-form-field>
           </div>
           <div class="col-md-6">
             <mat-form-field appearance="outline">
               <mat-label>Correo:</mat-label>
-              <input matInput formControlName="correo" [disabled]="true" />
+              <input matInput formControlName="correo" />
               <mat-icon matSuffix>mail</mat-icon>
             </mat-form-field>
           </div>
@@ -74,7 +74,7 @@
                 <mat-icon>devices</mat-icon>
               </mat-panel-description>
             </mat-expansion-panel-header>
-    
+
             <div class="row g-3 mt-2">
               <div class="col-md-12">
                 <section class="example-section">
@@ -180,7 +180,7 @@
                 <mat-icon>print</mat-icon>
               </mat-panel-description>
             </mat-expansion-panel-header>
-    
+
             <div class="row g-3 mt-2">
               <div class="col-md-12">
                 <section class="example-section">
@@ -258,9 +258,15 @@
             </button>
           </div>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-6 position-relative">
           <div class="row justify-content-center align-items-center g-2">
-            <ngx-gallery [options]="galleryOptions" [images]="galleryImages"></ngx-gallery>
+            <ngx-gallery [options]="galleryOptions" [images]="galleryImages" (change)="onImageChange($event)"></ngx-gallery>
+            <button 
+              *ngIf="galleryImages.length > 0" 
+              class="btn-delete-image" 
+              (click)="removeImage(currentImageIndex)">
+              Eliminar
+            </button>
           </div>
         </div>
       </div>
