Ahora los items de equipos e impresoras se consultan de la bd y se agregaron los botones para eliminar y editar, aun no tienen funcionalidad

--- a/src/app/censo/dialogs/censo-dialog/censo-dialog.component.html
+++ b/src/app/censo/dialogs/censo-dialog/censo-dialog.component.html
@@ -79,12 +79,30 @@
               <div class="col-md-12">
                 <section class="example-section">
                   <label class="example-margin">Equipo:</label>
-                  <mat-radio-group formControlName="tipo">
-                    <mat-radio-button class="example-margin" value="computadora">Computadora</mat-radio-button>
-                    <mat-radio-button class="example-margin" value="escritorio">Escritorio</mat-radio-button>
-                    <mat-radio-button class="example-margin" value="portatil">Portatil</mat-radio-button>
-                    <mat-radio-button class="example-margin" value="tableta">Tableta</mat-radio-button>
-                  </mat-radio-group>
+                  <div *ngFor="let equipo of equipos" class="dispositivo-container">
+                    <mat-radio-group formControlName="tipo">
+                      <div class="radio-button-container">
+                        <mat-radio-button class="example-margin" [value]="equipo.nombre">{{equipo.nombre}}</mat-radio-button>
+                        <div class="btn-container">
+                          <button mat-icon-button color="accent"
+                            (click)="editDispositivo(equipo)" class="btn-small">
+                            <mat-icon>edit</mat-icon>
+                          </button>
+                          <button mat-icon-button color="warn"
+                            (click)="deleteDispositivo(equipo)" class="btn-small">
+                            <mat-icon>delete</mat-icon>
+                          </button>
+                        </div>
+                      </div>
+                    </mat-radio-group>
+                  </div>
+                  <div class="margin-left-20">
+                    <div class="button-container">
+                      <button [disabled]="" mat-fab color="primary">
+                        <mat-icon>add</mat-icon>
+                      </button>
+                    </div>
+                  </div>
                 </section>
               </div>
               <hr />
@@ -185,12 +203,30 @@
               <div class="col-md-12">
                 <section class="example-section">
                   <label class="example-margin">Equipo:</label>
-                  <mat-radio-group formControlName="tipo">
-                    <mat-radio-button class="example-margin" value="impresora">Impresora</mat-radio-button>
-                    <mat-radio-button class="example-margin" value="matriz">Matriz</mat-radio-button>
-                    <mat-radio-button class="example-margin" value="laser">Laser</mat-radio-button>
-                    <mat-radio-button class="example-margin" value="termica">Termica</mat-radio-button>
-                  </mat-radio-group>
+                  <div *ngFor="let impresora of impresoras" class="dispositivo-container">
+                    <mat-radio-group formControlName="tipo">
+                      <div class="radio-button-container">
+                        <mat-radio-button class="example-margin" [value]="impresora.nombre">{{impresora.nombre}}</mat-radio-button>
+                        <div class="btn-container">
+                          <button mat-icon-button color="accent"
+                            (click)="editDispositivo(impresora)" class="btn-small">
+                            <mat-icon>edit</mat-icon>
+                          </button>
+                          <button mat-icon-button color="warn"
+                            (click)="deleteDispositivo(impresora)" class="btn-small">
+                            <mat-icon>delete</mat-icon>
+                          </button>
+                        </div>
+                      </div>
+                    </mat-radio-group>
+                  </div>
+                  <div class="margin-left-20">
+                    <div class="button-container">
+                      <button [disabled]="" mat-fab color="primary">
+                        <mat-icon>add</mat-icon>
+                      </button>
+                    </div>
+                  </div>
                 </section>
               </div>
               <hr />
