--- a/src/app/censo/dialogs/items-dispositivo/items-dispositivo.component.html
+++ b/src/app/censo/dialogs/items-dispositivo/items-dispositivo.component.html
@@ -1,1 +1,27 @@
-<p>items-dispositivo works!</p>
+
+<h2 mat-dialog-title>{{ isEditMode == true ? 'Editar Dispositivo' : 'Nuevo Dispositivo'}} </h2>
+<mat-dialog-content>
+  <form autocomplete="" [formGroup]="myForm">
+    <div class="row g-3 mt-2">
+      <div class="col-md-6">
+        <mat-form-field appearance="outline">
+          <mat-label>Dispositivo:</mat-label>
+          <input matInput formControlName="nombre" />
+          <mat-icon matSuffix>manage_accounts</mat-icon>
+        </mat-form-field>
+      </div>
+    </div>
+  </form>
+</mat-dialog-content>
+<mat-dialog-actions align="end">
+  <div class="row gx-4 me-3">
+    <div class="col">
+      <button mat-button (click)="onNoClick()">Cerrar</button>
+    </div>
+    <div class="col">
+      <button mat-flat-button color="primary" (click)="onSubmit()">
+        Guardar
+      </button>
+    </div>
+  </div>
+</mat-dialog-actions>
