--- a/src/app/censo/dialogs/censo-detalle-dialog/censo-detalle-dialog.component.html
+++ b/src/app/censo/dialogs/censo-detalle-dialog/censo-detalle-dialog.component.html
@@ -17,33 +17,41 @@
     <div class="col-md-3">{{ data.cliente.correo }}</div>
 
     <div class="col-md-3 fw-bolder">Fecha de registro:</div>
-    <div class="col-md-3">{{ data.cliente.fechaRegistro }}</div>
+    <div class="col-md-3">{{ formattedFecha }}</div>
 
     <hr />
     <div class="col-md-12">
-      <h2 class="fw-bolder">Equipo: {{ data.equipo.tipo }}</h2>
+      <h2 class="fw-bolder">Equipo: {{ data.equipo?.tipo || data.impresora?.tipo }}</h2>
     </div>
     <hr />
 
     <div class="col-md-3 fw-bolder">Modelo:</div>
-    <div class="col-md-3">{{ data.equipo.modelo }}</div>
+    <div class="col-md-3">{{ data.equipo?.modelo || data.impresora?.modelo }}</div>
     <div class="col-md-3 fw-bolder">Marca:</div>
-    <div class="col-md-3">{{ data.equipo.marca }}</div>
+    <div class="col-md-3">{{ data.equipo?.marca || data.impresora?.marca}}</div>
 
     <div class="col-md-3 fw-bolder">Numero de serie:</div>
-    <div class="col-md-3">{{ data.equipo.numeroSerie }}</div>
-    <div class="col-md-3 fw-bolder">Sistema Operativo + Version:</div>
-    <div class="col-md-3">{{ data.equipo.sistemOperativoV }}</div>
+    <div class="col-md-3">{{ data.equipo?.numeroSerie || data.impresora?.numeroSerie }}</div>
 
-    <div class="col-md-3 fw-bolder">Office + Version:</div>
-    <div class="col-md-3">{{ data.equipo.officeV }}</div>
-    <div class="col-md-3 fw-bolder">Antivirus:</div>
-    <div class="col-md-3">{{ data.equipo.antivirus }}</div>
+    <div *ngIf="data.impresora">
+      <div class="col-md-3 fw-bolder">Toner:</div>
+      <div class="col-md-3">{{ data.impresora?.toner}}</div>
+    </div>
 
-    <div class="col-md-3 fw-bolder">Fecha de caducidad antivirus:</div>
-    <div class="col-md-3">{{ data.equipo.fechaCaducidadAnti }}</div>
+    <div *ngIf="data.equipo">
+      <div class="col-md-3 fw-bolder">Sistema Operativo + Version:</div>
+      <div class="col-md-3">{{ data.equipo.sistemOperativoV }}</div>
+      <div class="col-md-3 fw-bolder">Office + Version:</div>
+      <div class="col-md-3">{{ data.equipo.officeV }}</div>
+      <div class="col-md-3 fw-bolder">Antivirus:</div>
+      <div class="col-md-3">{{ data.equipo.antivirus }}</div>      
+      <div class="col-md-3 fw-bolder">Fecha de caducidad antivirus:</div>
+      <div class="col-md-3">{{ formattedFechaCaducidadAnti }}</div>
+    </div>
+   
+
     <div class="col-md-3 fw-bolder">QR:</div>
-    <div class="col-md-3">{{ data.equipo.qr }}</div>
+    <div class="col-md-3">{{ data.equipo?.qr || data.impresora?.qr}}</div>
 
     <hr />
     <div class="col-md-12">
@@ -54,10 +62,7 @@
     <div class="row justify-content-center align-items-center g-2">
       <div class="col-md-6">
         <div class="row justify-content-center align-items-center g-2">
-          <ngx-gallery
-            [options]="galleryOptions"
-            [images]="galleryImages"
-          ></ngx-gallery>
+          <ngx-gallery [options]="galleryOptions" [images]="galleryImages"></ngx-gallery>
         </div>
       </div>
     </div>
